test: update all tests to use UUID instead of Long