@@ -2,7 +2,10 @@ package com.drtx.ecomerce.amazon.application.usecases;
 import com.drtx.ecomerce.amazon.application.usecases.order.OrderUseCaseImpl;
 
 import com.drtx.ecomerce.amazon.core.model.order.Order;
+import com.drtx.ecomerce.amazon.core.model.order.OrderSearchCriteria;
 import com.drtx.ecomerce.amazon.core.model.order.OrderState;
+import com.drtx.ecomerce.amazon.core.model.pagination.PageRequest;
+import com.drtx.ecomerce.amazon.core.model.pagination.PageResponse;
 import com.drtx.ecomerce.amazon.core.model.user.User;
 import com.drtx.ecomerce.amazon.core.model.user.UserRole;
 import com.drtx.ecomerce.amazon.core.ports.out.persistence.OrderRepositoryPort;
@@ -13,12 +16,14 @@ import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
+import org.springframework.data.domain.PageImpl;
 
 import java.math.BigDecimal;
 import java.time.LocalDateTime;
-import java.util.Arrays;
+import java.util.Collections;
 import java.util.List;
 import java.util.Optional;
+import java.util.UUID;
 
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.mockito.ArgumentMatchers.any;
@@ -36,20 +41,26 @@ class OrderUseCaseImplTest {
 
     private Order testOrder;
     private User testUser;
+    private UUID orderUuid;
 
     @BeforeEach
     void setUp() {
         testUser = new User(
                 1L,
+                UUID.randomUUID(),
                 "John Doe",
                 "john@example.com",
                 "password123",
                 "123 Main St",
                 "555-0100",
-                UserRole.USER);
+                UserRole.USER,
+                true,
+                false);
 
+        orderUuid = UUID.randomUUID();
         testOrder = new Order(
                 1L,
+                orderUuid,
                 testUser,
                 List.of(),
                 new BigDecimal("299.99"),
@@ -65,6 +76,7 @@ class OrderUseCaseImplTest {
         // Given
         Order newOrder = new Order(
                 null,
+                UUID.randomUUID(),
                 testUser,
                 List.of(),
                 new BigDecimal("149.99"),
@@ -75,6 +87,7 @@ class OrderUseCaseImplTest {
 
         Order savedOrder = new Order(
                 2L,
+                newOrder.getUuid(),
                 testUser,
                 List.of(),
                 new BigDecimal("149.99"),
@@ -100,83 +113,46 @@ class OrderUseCaseImplTest {
     @DisplayName("Should get order by ID successfully")
     void shouldGetOrderByIdSuccessfully() {
         // Given
-        Long orderId = 1L;
-        when(orderRepositoryPort.findById(orderId)).thenReturn(Optional.of(testOrder));
+        when(orderRepositoryPort.findById(1L)).thenReturn(Optional.of(testOrder));
 
         // When
-        Optional<Order> result = orderUseCase.getOrderById(orderId);
+        Optional<Order> result = orderUseCase.getOrderById(1L);
 
         // Then
         assertThat(result).isPresent();
-        assertThat(result.get().getId()).isEqualTo(orderId);
-        assertThat(result.get().getUser()).isEqualTo(testUser);
-        assertThat(result.get().getTotal()).isEqualByComparingTo(new BigDecimal("299.99"));
-        verify(orderRepositoryPort, times(1)).findById(orderId);
+        assertThat(result.get()).isEqualTo(testOrder);
+        verify(orderRepositoryPort, times(1)).findById(1L);
     }
 
     @Test
-    @DisplayName("Should return empty when order not found by ID")
-    void shouldReturnEmptyWhenOrderNotFoundById() {
+    @DisplayName("Should return empty when getting non-existent order")
+    void shouldReturnEmptyWhenGettingNonExistentOrder() {
         // Given
-        Long orderId = 999L;
-        when(orderRepositoryPort.findById(orderId)).thenReturn(Optional.empty());
+        when(orderRepositoryPort.findById(99L)).thenReturn(Optional.empty());
 
         // When
-        Optional<Order> result = orderUseCase.getOrderById(orderId);
+        Optional<Order> result = orderUseCase.getOrderById(99L);
 
         // Then
         assertThat(result).isEmpty();
-        verify(orderRepositoryPort, times(1)).findById(orderId);
+        verify(orderRepositoryPort, times(1)).findById(99L);
     }
 
     @Test
-    @DisplayName("Should get all orders successfully")
-    void shouldGetAllOrdersSuccessfully() {
+    @DisplayName("Should get all orders paginated")
+    void shouldGetAllOrdersPaginated() {
         // Given
-        Order order2 = new Order(
-                2L,
-                testUser,
-                List.of(),
-                new BigDecimal("499.99"),
-                OrderState.SENT,
-                LocalDateTime.now(),
-                null,
-                List.of());
-
-        Order order3 = new Order(
-                3L,
-                testUser,
-                List.of(),
-                new BigDecimal("99.99"),
-                OrderState.DELIVERED,
-                LocalDateTime.now().minusDays(5),
-                LocalDateTime.now(),
-                List.of());
-
-        List<Order> orders = Arrays.asList(testOrder, order2, order3);
-        when(orderRepositoryPort.findAll()).thenReturn(orders);
+        OrderSearchCriteria criteria = new OrderSearchCriteria(null, null, new PageRequest(0, 10, null, null));
+        org.springframework.data.domain.Page<Order> ordersPage = new PageImpl<>(List.of(testOrder));
+        when(orderRepositoryPort.searchOrders(any(OrderSearchCriteria.class))).thenReturn(ordersPage);
 
         // When
-        List<Order> result = orderUseCase.getAllOrders();
+        PageResponse<Order> result = orderUseCase.getAllOrders(criteria);
 
         // Then
-        assertThat(result).hasSize(3);
-        assertThat(result).containsExactlyInAnyOrder(testOrder, order2, order3);
-        verify(orderRepositoryPort, times(1)).findAll();
-    }
-
-    @Test
-    @DisplayName("Should return empty list when no orders exist")
-    void shouldReturnEmptyListWhenNoOrdersExist() {
-        // Given
-        when(orderRepositoryPort.findAll()).thenReturn(List.of());
-
-        // When
-        List<Order> result = orderUseCase.getAllOrders();
-
-        // Then
-        assertThat(result).isEmpty();
-        verify(orderRepositoryPort, times(1)).findAll();
+        assertThat(result.content()).hasSize(1);
+        assertThat(result.content().get(0)).isEqualTo(testOrder);
+        verify(orderRepositoryPort, times(1)).searchOrders(criteria);
     }
 
     @Test
@@ -185,6 +161,7 @@ class OrderUseCaseImplTest {
         // Given
         Order updatedOrder = new Order(
                 1L,
+                orderUuid,
                 testUser,
                 List.of(),
                 new BigDecimal("349.99"),
@@ -211,20 +188,6 @@ class OrderUseCaseImplTest {
     void shouldDeleteOrderSuccessfully() {
         // Given
         Long orderId = 1L;
-        doNothing().when(orderRepositoryPort).delete(orderId);
-
-        // When
-        orderUseCase.deleteOrder(orderId);
-
-        // Then
-        verify(orderRepositoryPort, times(1)).delete(orderId);
-    }
-
-    @Test
-    @DisplayName("Should handle delete for non-existent order")
-    void shouldHandleDeleteForNonExistentOrder() {
-        // Given
-        Long orderId = 999L;
         doNothing().when(orderRepositoryPort).delete(orderId);
 
         // When
